--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "private": true,
   "scripts": {
     "start": "python3 -m http.server 5173",
-    "test": "node test_reflection.js"
+    "test": "node tests/reflection.test.js"
   }
 }
